web-app/css/custom.css
/* ... */
.socialGo li {float: left; list-style: none; margin: 10px 10px 0 0;}
.socialGo li:nth-child(2n) {margin-right: 0;}
.socialGo li a {width: 276px; padding: 12px 0 !important; margin: 0 !important;}
.onecol .form-group {margin-top: 20px; margin-bottom: 20px;}
.onecol .form-group.groupRadio {margin: 0;}
.onecol .form-group.groupRadio + .form-group {margin-top: 0;}
.onecol .checkbox-inline {margin: 4px 8px; font-size: 85%; line-height: 1.7;}
.onecol form .cancel {font-size: 15px !important; font-size: 1.5rem; margin: 0 6px 0 0;}

.preFooter {background-color: #efefef; text-align: center; padding: 40px 20px 80px 20px;}
.preFooter .intro {margin-top: 0;}
.preFooter .user-list {padding: 20px 0 0 0; margin: 0;}
.preFooter .user-list li {float: left; list-style: none;}
.preFooter .user-list li .user-img {margin-right: 8px;}

.links.simple {padding: 20px;}
.links.simple .legal li {display: block; margin: 0 0 8px 0; border-bottom: solid 1px #a8a8a8; padding: 4px;}
.links.simple .legal li:last-child {border: none;}

/* cuando se tengan los 4 botones de acceso a la web se necesitará este margin */
/*#remember-pass {margin-top: 51px;}*/

.max600 {max-width: 600px; margin: 0 auto;}
.max600 .btn {margin-bottom: 20px !important;}
.screen {max-width: 560px;}
.steps ol {margin: 0; padding: 0;}
.steps {text-align: center; color: #dadada; margin: 0 0 60px 0;}

.steps li {list-style: none; display: inline-block; margin: 0 20px 0 0;}
.steps li:last-child {margin: 0;}
.steps li .badge {background-color: #dadada; border-radius: 20px; width: 40px; height: 40px; font-size: 24px; font-size: 2.4rem; font-family: 'League Gothic', Arial, sans-serif; padding: 8px 4px 0 4px; font-weight: normal;}
.steps li.active .badge {background-color: #ff9431;}

.onecol .boxes {background-color: #fcffd5; padding: 30px 40px; }
.onecol .boxes h2 {text-transform: none; font-weight: bold; font-size: 16px; font-size: 1.6rem; margin-bottom: 30px;}

.interestContainer,
.usersContainer {
  background-color: #efefef;
  padding: 8px 0 8px 8px;
  margin: 20px 0 40px;
}
.interestContainer span {font-size: 48px; font-size: 4.8rem; display: block; margin-bottom: 8px;}

.usersContainer .user-img.big {width: 80px; height: 80px; margin: 0 0 5px 0;}
.usersContainer .rol {
    bottom: 2px;
    color: #545454;
    display: block;
    left: 2px;
    position: absolute;
    text-align: center;
    width: 94px;
}
.usersContainer .icheckbox_line-orange, .iradio_line-orange {height: 145px;}

/* iCheck plugin Line skin, orange
----------------------------------- */
.icheckbox_line-orange,
.iradio_line-orange {
    position: relative;
    display: block;
    float: left;
    margin: 0 6px 6px 0;
    padding: 12px 2px 0 2px;
    width: 98px;
    height: 114px;
    font-size: 12px;
    line-height: 1.2;
    color: #ff9431;
    background: #fff;
    text-align: center;
    border: none;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    cursor: pointer;
}
/*.icheckbox_line-orange:first-letter {font-size: 200%;}*/

.icheckbox_line-orange.hover,
.iradio_line-orange.hover {
    background: #ff9431;
    color: #fff;
}
.icheckbox_line-orange.checked,
.icheckbox_line-orange.checked.hover,
.iradio_line-orange.checked {
    background: url('../images/checked.png') no-repeat top right #ff9431;
    color: #fff;
}
.icheckbox_line-orange.disabled,
.iradio_line-orange.disabled {
    background: #ffc998;
    cursor: default;
}
.icheckbox_line-orange.checked.disabled,
.iradio_line-orange.checked.disabled {
    background: #ffc998;
}

/* estilos para el resize upload image */
.uploaderImageContainer > div {height: 390px; margin: 10px 0 0 0; position: relative;}
.qq-uploader {position: relative; width: 100%;}
.qq-upload-button {
    text-align: center;
    color: #20a2ea;
    text-align: center;
    padding: 8px 0px;
    height: 34px;
}
.uploadImage {width:220px; height:220px; margin-right:20px;}
.qq-upload-button-hover {text-decoration: underline;}
.qq-upload-button-focus {outline:1px dotted black;}
.qq-upload-drop-area {
  position: absolute;
  top: 0;
  height: 372px;
  left:0;
  z-index: 2;
  width: 100%;
  display: block !important;
  text-align: center;
  border: 1px solid #EFEFEF;
  background: url('../images/fileUpload.png') center 90px no-repeat transparent;
  padding: 195px 20px 20px 20px;
  display: block;
}
.uploaderImageContainer.USER_PROFILE .qq-upload-drop-area{height:278px;}
.button-container {width: 80%; margin: 0 auto; border-radius: 4px; padding: 10px;}
.qq-upload-drop-area-active {background-color:#FFF8ED;}
.qq-upload-list {display:none;}
.qq-upload-list {margin:15px 35px; padding:0; list-style:disc;}
.qq-upload-list li { margin:0; padding:0; line-height:15px; font-size:12px;}
.qq-upload-file,
.qq-upload-spinner,
.qq-upload-size,
.qq-upload-cancel,
.qq-upload-failed-text {margin-right: 7px;}
.qq-upload-spinner {display:inline-block; background: url('../images/loading.gif'); width:15px; height:15px; vertical-align:text-bottom;}
.qq-upload-size,.qq-upload-cancel {font-size: 11px;}
.qq-upload-failed-text {display: none;}
.qq-upload-fail .qq-upload-failed-text {display: inline;}
/* fin estilos resize upload image */



/* ley =========== */
/* ====================================================== */
.callMobile {position: fixed; top: 76px; left: 24px; display: block; width: 68px; height: 68px; border-radius: 34px; padding: 15px 0; margin-bottom: 10px; background-color: rgba(32, 162, 234, 0.6); z-index: 999; text-align: center;}
.callMobile a, .callMobile a:hover, .callMobile a:focus, .callMobile a:active {color: #fff; text-decoration: none; font-family: 'League Gothic', Arial, sans-serif; text-transform: uppercase; font-size: 30px; font-size: 30px;}

.kakareo.post.ley {margin: -37px 0 50px 0;}
.kakareo.post.ley.participants {margin: 0 0 50px 0;}
/* ... */

